# spstencil

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml
commands/: index.html
docs/: commands.md  index.md  styles.css
search/: search_index.json
src/spstencil/: __init__.py  cli.py  io.py  ops.py  project.py  st.py  unroll.r
src/spstencil/_utils/: __init__.py  axes.py  cyx2yxc.py
tests/: test_project.py  test_project_kdtree.py  test_spatialdata_integration.py
