[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spstencil"
version = "0.1.0"
description = "Subset, split, and aggregate h5ad files"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "spstencil" }]
dependencies = [
  "anndata>=0.10,<0.11",
  "pandas>=2.0",
  "numpy>=1.23",
  "h5py>=3.8",
  "tifffile>=2023.7.10",
  "Pillow>=9.5",
  "pytest>=8.4.1",
  "scipy>=1.13.1",
  "zarr<3",
]

[project.scripts]
spstencil = "spstencil.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true


